# wfc

./: .gitignore  README.md  batch_experiments.sh  entry.py  gifmaker.py  main.py  pyproject.toml  requirements.txt
paper/: Bibliography.bib  Thesis.tex
paper/BackMatter/: Conclusions.tex  Recomendations.tex
paper/MainMatter/: Background.tex  Classification.tex  Introduction.tex  Rendering.tex  Validation.tex
scripts/: color_swapper.py  gifmaker.py  scaler.py
src/: __init__.py  core.py  csp.py  dichotomic.py  generalization.py  gifmaker.py  graphics.py  image_funcs.py  interface.py  lookup_table.py  pattern.py  rewrote.py  slot.py  texture.py  texture_gen.py  utils.py  wfc.py  wfcp.py  wrapper.py
src/classifiers/: classifier.py  deterministic.py
src/functions/: classifiers.py  core.py  decorators.py  generalization.py  renderers.py  validators.py
src/renderers/: deterministic.py  renderer.py  sk.py
src/utils/: matrices.py
src/validators/: affinity.py  deterministic.py  generalizer.py  grouper.py  kmeans.py  sk.py  union_affinity.py  validator.py
tests/: ac3_tests.py  test_texture_gen.py
wfc/: classifiers.py  core.py  entropy.py  extraction.py  generalization.py  image_handling.py  lookup_table.py  pattern.py  renderers.py  slot.py  utils.py  validators.py
wfc/renderers/: deterministic.py  sk.py
wfc/validators/: sk.py
wpaper/: paper.tex
