[tool.poetry]
name = "wfc"
version = "0.1.0"
description = ""
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.18.1"
imageio = "^2.6.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
